Revision history for Perl extension Search::Xapian.

1.2.25.4
	[Changes contributed by Olly Betts]
	- Add exception-related files which were new in 1.2.25.3 to MANIFEST
	  so they're shipped.  Reported by Tina Müller and Leah Neukirchen.

1.2.25.3  Tue Nov 17 00:33:44 UTC 2020
	[Changes contributed by Alyssa Ross]
	- Allow AUTOMATED_TESTING builds against xapian-core 1.4.x.
	[Changes contributed by Olly Betts]
	- Properly handle newer exceptions.  The C++ exception class
	  WildcardError wasn't known to the Perl bindings, and would result in
	  croak("something terrible happened").  The C++ exception classes
	  DatabaseClosedError and DatabaseNotFoundError also weren't known, but
	  these would instead be reported as their base classes DatabaseError
	  and DatabaseOpeningError respectively.  Reported by Adam Sjøgren.
	- README: Update to reflect that the SWIG-generated Perl bindings are
	  stable since xapian-bindings 1.4.16.

1.2.25.2  Wed Sep 19 23:58:12 UTC 2018
	[Changes contributed by Olly Betts]
	- Fix to build against Xapian <= 1.4.1 again, broken by changes in
	  1.2.25.1.  Reported by Jim Lynch.

1.2.25.1  Mon Jul  9 03:29:14 UTC 2018
	[Changes contributed by Olly Betts]
	- Skip testcase t/parser.t if we're using xapian-core < 1.2.21 which
	  doesn't support character '!' in the start of a range.  Reported by
	  melmothx on #xapian.
	- Add compatibility with Xapian git master.

1.2.25.0  Tue Sep 26 02:06:18 UTC 2017
	[Changes contributed by Olly Betts]
	- Wrap WritableDatabase::commit(), which is the preferred name for
	  WritableDatabase::flush().
	- Fix long SEE ALSO lines by putting a newline after each comma in the
	  SEE ALSO lists, fixing warnings from man such as:
	  <standard input>:109: warning [p 1, 8.0i]: can't break line
	- Backport some improvements to the POD documentation from the
	  SWIG-based bindings in xapian-bindings 1.4.x.
	- Avoid perl -W in tests as that seems to break recent versions of
	  Test::More.